--- a/styles.css
+++ b/styles.css
@@ -5,4 +5,85 @@
 
 header{
     background: url('./images/header-background.png');
+    height: 500px;
+    color: #1E266D;
+}
+
+#brandName{
+    display: flex;
+    align-items: center;
+   /* padding: 2% 11.5% 0% 11.5%;*/
+    font-size: 1.2em;
+}
+
+#brandName h1{
+    padding-left: 0.5em;
+}
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 25px;
+}
+
+nav ul{
+    list-style-type: none;
+    overflow: hidden;
+}
+
+nav ul li{
+    float: left;
+}
+
+nav ul li a{
+    display: block;
+    font-size: 1em;
+    padding: 17px 12px;
+    text-decoration: none;
+}
+
+nav ul li a:hover{
+    color: #FF6C02;
+}
+
+nav ul li button{
+    background: #1E266D;
+    padding: 10px 24px;
+    margin: 5px 0px 0px 16px;
+    color: #fff;
+    border-radius: 32px;
+}
+
+nav ul li button:hover{
+    background-color: transparent;
+    color: #1E266D;
+}
+
+li.dropdown{
+    display: inline-block;
+}
+
+.dropContent{
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropContent li{
+    float: none;
+}
+
+.dropContent a{
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+
+.dropdown:hover .dropContent{
+    display: block;
 }
