--- a/styles.css
+++ b/styles.css
@@ -1,138 +1,77 @@
 *{
     margin: 0px;
-    padding: 0px
+    padding: 0px;
+    box-sizing: border-box;
+    font: "Open sans", sans-serif;
 }
 
-header{
-    background: url(/images/details-1-background.png);
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.4rem 0.5rem;
+    margin: 0px 11%;
     color: #1E266D;
+    font-weight: 600;
+    font-size: 0.95rem;
+   
 }
 
-#brandName{
+.brand{
     display: flex;
-    align-items: center;
-   /* padding: 2% 11.5% 0% 11.5%;*/
-    font-size: 1.2em;
+    justify-content: space-between;
 }
 
-#brandName h1{
-    padding-left: 0.5em;
+.brand img{
+    vertical-align: middle;
 }
 
-nav{
+.brand h1{
+    font-size: 1.9rem;
+    padding-left: 0.5rem;
+    text-align: left;
+}
+
+.nav{
     display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    background-color: #f9f9f9;
+    justify-content: space-between;
 }
 
-nav ul{
-    list-style-type: none;
+.nav ul{
     overflow: hidden;
+    list-style-type: none;
 }
 
-nav ul li{
+.nav ul li{
     float: left;
 }
 
-nav ul li a{
+.nav ul li a{
     display: block;
-    font-size: 1em;
-    padding: 17px 12px;
+    padding: 0.75rem 0.75rem ;
     text-decoration: none;
+    background-color: transparent;
 }
 
-nav ul li a:hover{
-    color: #FF6C02;
-}
-
-nav ul li button{
-    background: #1E266D;
-    padding: 10px 24px;
-    margin: 5px 0px 0px 16px;
+.nav ul li button{
+    padding: 0.75rem 2rem;
+    margin: 0px 1rem;
+    border: 1px solid #1E266D;
+    background-color: #1E266D;
     color: #fff;
     border-radius: 32px;
+    font-weight: 500;
 }
 
-nav ul li button:hover{
-    background-color: transparent;
-    color: #1E266D;
-}
-
-li.dropdown{
+.dropdown{
     display: inline-block;
 }
 
-.dropContent{
+.drop-content{
     display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+
 }
-
-.dropContent li{
-    float: none;
-}
-
-.dropContent a{
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-
-.dropdown:hover .dropContent{
-    display: block;
-}
-
-#home{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    margin: 6% 10% 0px 15%;
-}
-
-#home #homeText{
-    margin-right: 2%;
-    margin-left: -5%;
-    width: 45%;
-    margin-bottom: 9%;
-}
-
-#home h2{
-    font-size: 60px;
-    line-height: 1.1em;
-}
-
-#home #homeImg{
-    margin-right: -100px;
-}
-
-#home p{
-    font-size: 23px;
-    color: #515867;
-    line-height: 1.2em;
-    margin-top: 15px;
-}
-
-#homeBtns{
-    margin-top: 5%;
-}
-
-#home .homeBtn{
-    font-size: 14px;
-    padding: 23px 42px;
-    margin-left: 8px;
-    border-radius: 32px;
-    border: 1px solid #FF6C02;
-    font-weight: 600;
-}
-
-#signUpBtn{
+/* #signUpBtn{
     color: #f9f9f9;
     background-color: #FF6C02;
 }
@@ -150,4 +89,89 @@ li.dropdown{
 #discoverBtn:hover{
     color: #f9f9f9;
     background-color: #FF6C02;
+} */
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+.container-fluid{
+    width: 100%;
 }
+
+/* Extra small devices */
+@media (max-width: 576px) {
+    .col-xs-1 {width: 8.33%;}
+    .col-xs-2 {width: 16.66%;}
+    .col-xs-3 {width: 25%;}
+    .col-xs-4 {width: 33.33%;}
+    .col-xs-5 {width: 41.66%;}
+    .col-xs-6 {width: 50%;}
+    .col-xs-7 {width: 58.33%;}
+    .col-xs-8 {width: 66.66%;}
+    .col-xs-9 {width: 75%;}
+    .col-xs-10 {width: 83.33%;}
+    .col-xs-11 {width: 91.66%;}
+    .col-xs-12 {width: 100%;}
+  }
+
+  /* Small devices*/
+  @media (min-width: 576px) {
+    .col-sm-1 {width: 8.33%;}
+    .col-sm-2 {width: 16.66%;}
+    .col-sm-3 {width: 25%;}
+    .col-sm-4 {width: 33.33%;}
+    .col-sm-5 {width: 41.66%;}
+    .col-sm-6 {width: 50%;}
+    .col-sm-7 {width: 58.33%;}
+    .col-sm-8 {width: 66.66%;}
+    .col-sm-9 {width: 75%;}
+    .col-sm-10 {width: 83.33%;}
+    .col-sm-11 {width: 91.66%;}
+    .col-sm-12 {width: 100%;}
+  }
+  
+
+  /* Medium Devices: */
+  @media (min-width: 768px) {
+    .col-md-1 {width: 8.33%;}
+    .col-md-2 {width: 16.66%;}
+    .col-md-3 {width: 25%;}
+    .col-md-4 {width: 33.33%;}
+    .col-md-5 {width: 41.66%;}
+    .col-md-6 {width: 50%;}
+    .col-md-7 {width: 58.33%;}
+    .col-md-8 {width: 66.66%;}
+    .col-md-9 {width: 75%;}
+    .col-md-10 {width: 83.33%;}
+    .col-md-11 {width: 91.66%;}
+    .col-md-12 {width: 100%;}
+    
+  }
+
+  /*Large Devices */
+  @media (min-width: 992px) {
+    .col-lg-1 {width: 8.33%;}
+    .col-lg-2 {width: 16.66%;}
+    .col-lg-3 {width: 25%;}
+    .col-lg-4 {width: 33.33%;}
+    .col-lg-5 {width: 41.66%;}
+    .col-lg-6 {width: 50%;}
+    .col-lg-7 {width: 58.33%;}
+    .col-lg-8 {width: 66.66%;}
+    .col-lg-9 {width: 75%;}
+    .col-lg-10 {width: 83.33%;}
+    .col-lg-11 {width: 91.66%;}
+    .col-lg-12 {width: 100%;}
+  }
+
+   
+
